--- a/src/main/resources/View/Dashboard.fxml
+++ b/src/main/resources/View/Dashboard.fxml
@@ -1,14 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="montalvo.planclock.Controller.Dashboard"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="760.0" prefWidth="1320.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="montalvo.planclock.Controller.Dashboard">
+   <children>
+      <TableView fx:id="customerTable" layoutX="24.0" layoutY="181.0" prefHeight="347.0" prefWidth="1272.0">
+        <columns>
+          <TableColumn fx:id="customerID" prefWidth="43.0" text="ID" />
+          <TableColumn fx:id="customerName" minWidth="0.0" prefWidth="141.0" text="Name" />
+            <TableColumn fx:id="customerAddress" minWidth="0.0" prefWidth="143.0" text="Address" />
+            <TableColumn fx:id="customerPostal" minWidth="0.0" prefWidth="143.0" text="Postal Code" />
+            <TableColumn fx:id="customerPhone" minWidth="0.0" prefWidth="143.0" text="Phone" />
+            <TableColumn fx:id="customerCreateDate" minWidth="0.0" prefWidth="143.0" text="Create Date" />
+            <TableColumn fx:id="customerCreatedBy" minWidth="0.0" prefWidth="143.0" text="Created By" />
+            <TableColumn fx:id="customerLastUpdate" minWidth="0.0" prefWidth="143.0" text="Last Update" />
+            <TableColumn fx:id="customerLastUpdateBy" minWidth="0.0" prefWidth="143.0" text="Last Updated By" />
+            <TableColumn fx:id="customerDivision" minWidth="0.0" prefWidth="70.0" text="Division ID" />
+        </columns>
+      </TableView>
+      <Button layoutX="81.0" layoutY="554.0" mnemonicParsing="false" onAction="#addBtnClick" prefHeight="25.0" prefWidth="52.0" text="Add" />
+      <Button layoutX="150.0" layoutY="554.0" mnemonicParsing="false" onAction="#editCustomer" prefHeight="25.0" prefWidth="52.0" text="Edit" />
+      <Button layoutX="1199.0" layoutY="700.0" mnemonicParsing="false" onAction="#exitApp" prefHeight="25.0" prefWidth="52.0" text="Exit" />
+      <Button layoutX="215.0" layoutY="554.0" mnemonicParsing="false" onAction="#deleteCustomer" prefHeight="25.0" prefWidth="52.0" text="Delete" />
+      <Label layoutX="44.0" layoutY="14.0" prefHeight="17.0" prefWidth="134.0" text="PlanClock">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Label>
+      <Label fx:id="errorLabel" layoutX="370.0" layoutY="518.0" prefHeight="35.0" prefWidth="498.0" />
+      <Label fx:id="usernameLabel" layoutX="1171.0" layoutY="35.0" text="username">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <RadioButton fx:id="appointmentRadio" layoutX="224.0" layoutY="121.0" mnemonicParsing="false" onAction="#appointmentRadioClick" text="Appointments">
+         <toggleGroup>
+            <ToggleGroup fx:id="viewToggleGrp" />
+         </toggleGroup>
+      </RadioButton>
+      <RadioButton fx:id="customerRadio" layoutX="383.0" layoutY="121.0" mnemonicParsing="false" selected="true" text="Customers" toggleGroup="$viewToggleGrp" />
+      <RadioButton layoutX="541.0" layoutY="121.0" mnemonicParsing="false" text="RadioButton" />
+   </children>
 </AnchorPane>
