--- a/src/main/resources/View/LoginPage.fxml
+++ b/src/main/resources/View/LoginPage.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="montalvo.planclock.Controller.LoginPage">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="montalvo.planclock.Controller.LoginPage">
    <children>
       <Button layoutX="168.0" layoutY="331.0" mnemonicParsing="false" onAction="#signInUser" prefHeight="25.0" prefWidth="80.0" text="Sign In" />
       <TextField fx:id="usernameField" layoutX="191.0" layoutY="146.0" />
@@ -17,7 +17,7 @@
       <Label layoutX="194.0" layoutY="117.0" text="Username" />
       <Label layoutX="194.0" layoutY="192.0" text="Password" />
       <Button layoutX="300.0" layoutY="331.0" mnemonicParsing="false" onAction="#exitApp" prefHeight="25.0" prefWidth="80.0" text="Exit" />
-      <Label fx:id="localeLabel" layoutX="510.0" layoutY="335.0" text="USA" />
+      <Label fx:id="localeLabel" layoutX="510.0" layoutY="335.0" />
       <Label fx:id="errorLabel" layoutX="397.0" layoutY="117.0" />
    </children>
 </AnchorPane>
