--- a/src/main/resources/View/Customers.fxml
+++ b/src/main/resources/View/Customers.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="760.0" prefWidth="1320.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="montalvo.planclock.Controller.Dashboard">
+<AnchorPane prefHeight="760.0" prefWidth="1320.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="montalvo.planclock.Controller.Customers">
    <children>
       <TableView fx:id="customerTable" layoutX="24.0" layoutY="181.0" prefHeight="347.0" prefWidth="1272.0">
         <columns>
@@ -29,8 +29,8 @@
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Label fx:id="errorLabel" layoutX="370.0" layoutY="518.0" prefHeight="35.0" prefWidth="498.0" />
-      <Label fx:id="usernameLabel" layoutX="1171.0" layoutY="35.0" text="username">
+      <Label fx:id="errorLabel" layoutX="411.0" layoutY="549.0" prefHeight="35.0" prefWidth="498.0" />
+      <Label fx:id="usernameLabel" layoutX="1171.0" layoutY="35.0" text="Username">
          <font>
             <Font size="18.0" />
          </font></Label>
@@ -40,6 +40,5 @@
          </toggleGroup>
       </RadioButton>
       <RadioButton fx:id="customerRadio" layoutX="383.0" layoutY="121.0" mnemonicParsing="false" selected="true" text="Customers" toggleGroup="$viewToggleGrp" />
-      <RadioButton layoutX="541.0" layoutY="121.0" mnemonicParsing="false" text="RadioButton" />
    </children>
 </AnchorPane>
