--- a/src/main/resources/View/EditCustomer.fxml
+++ b/src/main/resources/View/EditCustomer.fxml
@@ -2,9 +2,13 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="491.0" prefWidth="639.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="montalvo.planclock.Controller.EditCustomer">
-    <Label layoutX="61.0" layoutY="26.0" text="Add Customer" />
+<AnchorPane prefHeight="632.0" prefWidth="629.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="montalvo.planclock.Controller.EditCustomer">
+    <Label layoutX="61.0" layoutY="26.0" text="Edit Customer">
+      <font>
+         <Font name="System Bold" size="24.0" />
+      </font></Label>
     <TextField fx:id="customerIDField" disable="true" layoutX="64.0" layoutY="105.0" />
     <TextField fx:id="nameField" layoutX="64.0" layoutY="161.0" />
     <TextField fx:id="addressField" layoutX="64.0" layoutY="207.0" />
@@ -15,12 +19,12 @@
     <Label layoutX="64.0" layoutY="186.0" text="Address" />
     <Label layoutX="64.0" layoutY="232.0" text="postal code" />
     <Label layoutX="64.0" layoutY="279.0" text="Phone number" />
-    <Button layoutX="454.0" layoutY="415.0" mnemonicParsing="false" onAction="#saveBtnClicked" prefHeight="25.0" prefWidth="52.0" text="Save" />
-    <Button layoutX="545.0" layoutY="415.0" mnemonicParsing="false" onAction="#cancelBtnClicked" text="Cancel" />
-    <ComboBox fx:id="countryCombo" layoutX="63.0" layoutY="353.0" prefWidth="150.0" />
-    <ComboBox fx:id="divisionCombo" layoutX="63.0" layoutY="403.0" prefWidth="150.0" />
+    <Button layoutX="358.0" layoutY="471.0" mnemonicParsing="false" onAction="#saveBtnClicked" prefHeight="25.0" prefWidth="52.0" text="Save" />
+    <Button layoutX="449.0" layoutY="471.0" mnemonicParsing="false" onAction="#cancelBtnClicked" text="Cancel" />
+    <ComboBox fx:id="countryCombo" layoutX="63.0" layoutY="353.0" onAction="#countryFilter" prefWidth="150.0" />
+    <ComboBox fx:id="divisionCombo" layoutX="63.0" layoutY="403.0" onMouseClicked="#divisionFilter" prefWidth="150.0" />
     <Label layoutX="68.0" layoutY="330.0" text="Country" />
     <Label layoutX="67.0" layoutY="386.0" text="State" />
-    <Label fx:id="errorLabel" layoutX="380.0" layoutY="109.0" prefHeight="188.0" prefWidth="241.0" />
+    <Label fx:id="errorLabel" layoutX="264.0" layoutY="101.0" prefHeight="188.0" prefWidth="241.0" />
 
 </AnchorPane>
