--- a/src/main/resources/View/LoginPage.fxml
+++ b/src/main/resources/View/LoginPage.fxml
@@ -6,18 +6,20 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="montalvo.planclock.Controller.LoginPage">
    <children>
-      <Button layoutX="168.0" layoutY="331.0" mnemonicParsing="false" onAction="#signInUser" prefHeight="25.0" prefWidth="80.0" text="Sign In" />
+      <Button layoutX="170.0" layoutY="288.0" mnemonicParsing="false" onAction="#signInUser" prefHeight="25.0" prefWidth="80.0" text="Sign In" />
       <TextField fx:id="usernameField" layoutX="191.0" layoutY="146.0" />
       <TextField fx:id="passwordField" layoutX="191.0" layoutY="218.0" />
-      <Label layoutX="122.0" layoutY="34.0" prefHeight="43.0" prefWidth="95.0" text="Login In">
+      <Label layoutX="122.0" layoutY="34.0" prefHeight="43.0" prefWidth="95.0" text="Log In">
          <font>
             <Font name="SansSerif Bold" size="24.0" />
          </font>
       </Label>
       <Label layoutX="194.0" layoutY="117.0" text="Username" />
       <Label layoutX="194.0" layoutY="192.0" text="Password" />
-      <Button layoutX="300.0" layoutY="331.0" mnemonicParsing="false" onAction="#exitApp" prefHeight="25.0" prefWidth="80.0" text="Exit" />
-      <Label fx:id="localeLabel" layoutX="510.0" layoutY="335.0" />
+      <Button layoutX="302.0" layoutY="288.0" mnemonicParsing="false" onAction="#exitApp" prefHeight="25.0" prefWidth="80.0" text="Exit" />
+      <Label fx:id="localeLabel" layoutX="463.0" layoutY="353.0" prefHeight="17.0" prefWidth="123.0" />
       <Label fx:id="errorLabel" layoutX="397.0" layoutY="117.0" />
+      <Label layoutX="393.0" layoutY="353.0" text="Time Zone:" />
+      <ComboBox fx:id="languageCombo" layoutX="41.0" layoutY="349.0" onAction="#changeLanguage" prefWidth="150.0" promptText="English" />
    </children>
 </AnchorPane>
